--- a/index.html
+++ b/index.html
@@ -63,74 +63,63 @@ css: index.css
 		<div class="row">
 			<div>
 				<h1 style="color:#16A9E2;text-align:center">See how they use AnyFetch</h2>
+				</div>
+
 			</div>
-		
+			<div>
+				<ul class="list-inline intro-social-buttons" style="text-align:center">
+					<li><a href="use-cases.html" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">Use cases</span></a>
+					</li>
+				</ul>
+			</div>
+
+		</div>
+		<!-- /.container -->
+
+	</div>
+
+	<img src="../images/browser.png" />
+
+	<div class="content-section-b">
+
+		<div class="container">
+
+			<div class="col-sm-6 col-md-4">
+				<div class="thumbnail">
+					<img src="images/connections.svg">
+					<div class="caption">
+						<h3>Connect any data source</h3>
+						<p class="lead">Whether local or in the cloud, we provide open-source connectors to 20+ services. It only takes a few minutes to create your own!</p>
+					</div>
+				</div>
+			</div>
+
+			<div class="col-sm-6 col-md-4">
+				<div class="thumbnail">
+					<img src="images/key.svg">
+					<div class="caption">
+						<h3>Customize your business context</h3>
+						<p class="lead">Customize AnyFetch to your context and instantly get relevant data from your existing tools.</p>
+					</div>
+				</div>
+			</div>
+
+			<div class="col-sm-6 col-md-4">
+				<div class="thumbnail">
+					<img src="images/timer.svg">
+					<div class="caption">
+						<h3>Deliver faster</h3>
+						<p class="lead">The whole setup takes less than a few hours, that's about 100&times; less than enterprise search.</p>
+					</div>
+				</div>
+			</div>
 		</div>
 		<div>
-		<ul class="list-inline intro-social-buttons" style="text-align:center">
-			<li><a href="use-cases.html" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">Use cases</span></a>
-					</li>
-		</ul>
-	</div>
-		<br />
-		<br />
-		<!-- <div class="row">
-			<div class="col-lg-4 col-sm-4 partner-container">
-				<img class="partner-img" src="images/salesforce.png" >
-			</div>
-			<div class="col-lg-4 col-sm-4 partner-container">
-				<img class="partner-img" src="images/axa_white.png" >
-			</div>
-			<div class="col-lg-4 col-sm-4 partner-container">
-				<img class="partner-img" src="images/sopra_white.png" >
-			</div>
-		</div> -->
-
-	</div>
-	<!-- /.container -->
-
-</div>
-
-<div class="content-section-b">
-
-	<div class="container">
-
-		<div class="col-sm-6 col-md-4">
-			<div class="thumbnail">
-				<img src="images/connections.svg">
-				<div class="caption">
-					<h3>Connect any data source</h3>
-					<p class="lead">Whether local or in the cloud, we provide open-source connectors to 20+ services. It only takes a few minutes to create your own!</p>
-				</div>
-			</div>
-		</div>
-
-		<div class="col-sm-6 col-md-4">
-			<div class="thumbnail">
-				<img src="images/key.svg">
-				<div class="caption">
-					<h3>Customize your business context</h3>
-					<p class="lead">Customize AnyFetch to your context and instantly get relevant data from your existing tools.</p>
-				</div>
-			</div>
-		</div>
-
-		<div class="col-sm-6 col-md-4">
-			<div class="thumbnail">
-				<img src="images/timer.svg">
-				<div class="caption">
-					<h3>Deliver faster</h3>
-					<p class="lead">The whole setup takes less than a few hours, that's about 100&times; less than enterprise search.</p>
-				</div>
-			</div>
+			<ul class="list-inline intro-social-buttons" style="text-align:center">
+				<li><a href="http://anyfetch.com/how-it-works.html" class="btn btn-default btn-lg"><span class="network-name">How it works</span></a>
+				</li>
+			</ul>
 		</div>
 	</div>
-	<div>
-		<ul class="list-inline intro-social-buttons" style="text-align:center">
-			<li><a href="http://anyfetch.com/how-it-works.html" class="btn btn-default btn-lg"><span class="network-name">How it works</span></a>
-			</li>
-		</ul>
-	</div>
-</div>
 
 
