--- a/about-us.html
+++ b/about-us.html
@@ -24,6 +24,86 @@ css: about-us.css
 				</ul>
 			</div>
 		</div>
-	</div>
+	</div><!-- 
+		<div class="row">
+			<div class="col-lg-12">
+				<h2>Our team</h2>
+				<hr>
+				<!-- <div class="row"> -->
+					<div class="col-lg-3">
+						<div class="thumbnail-portrait">
+						<img class="portrait" src="http://static.squarespace.com/static/511bd9f9e4b082b64994c814/t/511f1775e4b084520081abef/1360992118895/PSY_1">
+							<div class="caption">
+								<h4>John Smith</h4>
+								<p>CEO</p>
+							</div>
+						</div>
+					</div>
+					<div class="col-lg-3">
+						<div class="thumbnail-portrait">
+						<img class="portrait" src="http://static.squarespace.com/static/511bd9f9e4b082b64994c814/t/511f1775e4b084520081abef/1360992118895/PSY_1">
+							<div class="caption">
+								<h4>John Smith</h4>
+								<p>CTO</p>
+							</div>
+						</div>
+					</div>
+					<div class="col-lg-3">
+						<div class="thumbnail-portrait">
+						<img class="portrait" src="http://static.squarespace.com/static/511bd9f9e4b082b64994c814/t/511f1775e4b084520081abef/1360992118895/PSY_1">
+							<div class="caption">
+								<h4>John Smith</h4>
+								<p>Intern</p>
+							</div>
+						</div>
+					</div>
+					<div class="col-lg-3">
+						<div class="thumbnail-portrait">
+						<img class="portrait" src="http://static.squarespace.com/static/511bd9f9e4b082b64994c814/t/511f1775e4b084520081abef/1360992118895/PSY_1">
+							<div class="caption">
+								<h4>John Smith</h4>
+								<p>Nombril centré</p>
+							</div>
+						</div>
+					</div>
+					<div class="col-lg-3">
+						<div class="thumbnail-portrait">
+						<img class="portrait" src="http://static.squarespace.com/static/511bd9f9e4b082b64994c814/t/511f1775e4b084520081abef/1360992118895/PSY_1">
+							<div class="caption">
+								<h4>John Smith</h4>
+								<p>Nombril centré</p>
+							</div>
+						</div>
+					</div>
+					<div class="col-lg-3">
+						<div class="thumbnail-portrait">
+						<img class="portrait" src="http://static.squarespace.com/static/511bd9f9e4b082b64994c814/t/511f1775e4b084520081abef/1360992118895/PSY_1">
+							<div class="caption">
+								<h4>John Smith</h4>
+								<p>Nombril centré</p>
+							</div>
+						</div>
+					</div>
+					<div class="col-lg-3">
+						<div class="thumbnail-portrait">
+						<img class="portrait" src="http://static.squarespace.com/static/511bd9f9e4b082b64994c814/t/511f1775e4b084520081abef/1360992118895/PSY_1">
+							<div class="caption">
+								<h4>John Smith</h4>
+								<p>Nombril centré</p>
+							</div>
+						</div>
+					</div>
+					<div class="col-lg-3">
+						<div class="thumbnail-portrait">
+						<img class="portrait" src="http://static.squarespace.com/static/511bd9f9e4b082b64994c814/t/511f1775e4b084520081abef/1360992118895/PSY_1">
+							<div class="caption">
+								<h4>John Smith</h4>
+								<p>Nombril centré</p>
+							</div>
+						</div>
+					</div>
+				<!-- </div> -->
+			</div>
+		</div> -->
 
 	</div>
