--- a/about-us.html
+++ b/about-us.html
@@ -24,12 +24,11 @@ css: about-us.css
 				</ul>
 			</div>
 		</div>
-	</div><!-- 
+	</div>
 		<div class="row">
 			<div class="col-lg-12">
 				<h2>Our team</h2>
 				<hr>
-				<!-- <div class="row"> -->
 					<div class="col-lg-3">
 						<div class="thumbnail-portrait">
 						<img class="portrait" src="http://static.squarespace.com/static/511bd9f9e4b082b64994c814/t/511f1775e4b084520081abef/1360992118895/PSY_1">
@@ -102,8 +101,7 @@ css: about-us.css
 							</div>
 						</div>
 					</div>
-				<!-- </div> -->
 			</div>
-		</div> -->
+		</div> 
 
 	</div>
