--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@ css: index.css
 					<h3>A complete solution built for developers</h3>
 					<hr class="intro-divider">
 					<ul class="list-inline intro-social-buttons">
-						<li><a href="http://developers.anyfetch.com/" class="btn btn-default btn-lg"><span class="network-name">Get started</span></a>
-						</li>
+						<!-- <li><a href="http://developers.anyfetch.com/" class="btn btn-default btn-lg"><span class="network-name">Get started</span></a>
+						</li> -->
 					</ul>
 				</div>
 			</div>
@@ -27,96 +27,64 @@ css: index.css
 	<!-- /.container -->
 
 </div>
-<!-- /.intro-header -->
 
-<!-- <div class="" style="background-image:url(../images/header.jpg)">
-
-	<div class="container">
-
-		<div class="row">
-			<div class="col-lg-12">
-				<div style="background-color:rgba(1,1,1,0)" class="jumbotron">
-					<br><br><br><br><br>
-					<h1 style="text-align:center;color:white">Search, properly done</h1>
-					<br>
-					<br>
-					<h2 style="text-align:center;color:white">A complete solution built for developers</h3>
-					<hr class="intro-divider">
-					<ul class="list-inline intro-social-buttons" style="text-align:center">
-						<li><a href="http://developers.anyfetch.com/" class="btn btn-default btn-lg"><span class="network-name">Get started</span></a>
-						</li>
-						<li><a href="mailto:contact@anyfetch.com" class="btn btn-default btn-lg"><span class="network-name">Contact us</span></a>
-						</li>
-					</ul>
-				</div>
-			</div>
-		</div>
-
-	</div>
-
-</div>-->
-
-<div class="banner" style="background-color:white">
+<div class="row browser">
 
 	<div class="container">
-			<div>
-				<h1 style="color:#16A9E2;text-align:center">See how they use AnyFetch</h2>
-				</div>
-
-			</div>
-			<div>
-				<ul class="list-inline intro-social-buttons" style="text-align:center">
-					<li><a href="use-cases.html" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">Use cases</span></a>
-					</li>
-				</ul>
-			</div>
-
-	</div>
-
-	<div class="row browser">
-		<img src="../images/browser.png" />
-	</div>
-
-	<div class="content-section-b">
-
-		<div class="container">
-
-			<div class="col-sm-6 col-md-4">
-				<div class="thumbnail">
-					<img src="images/connections.svg">
-					<div class="caption">
-						<h3>Connect any data source</h3>
-						<p class="lead">Whether local or in the cloud, we provide open-source connectors to 20+ services. It only takes a few minutes to create your own!</p>
-					</div>
-				</div>
-			</div>
-
-			<div class="col-sm-6 col-md-4">
-				<div class="thumbnail">
-					<img src="images/key.svg">
-					<div class="caption">
-						<h3>Customize your business context</h3>
-						<p class="lead">Customize AnyFetch to your context and instantly get relevant data from your existing tools.</p>
-					</div>
-				</div>
-			</div>
-
-			<div class="col-sm-6 col-md-4">
-				<div class="thumbnail">
-					<img src="images/timer.svg">
-					<div class="caption">
-						<h3>Deliver faster</h3>
-						<p class="lead">The whole setup takes less than a few hours, that's about 100&times; less than enterprise search.</p>
-					</div>
+		<div class="col-sm-6 col-md-4">
+			<div class="thumbnail-project">
+				<img src="images/connections.svg">
+				<div class="caption">
+					<h2>Connect any data source</h2>
+					<p class="lead">Whether local or in the cloud, we provide open-source connectors to 20+ services. It only takes a few minutes to create your own!</p>
 				</div>
 			</div>
 		</div>
-		<div>
-			<ul class="list-inline intro-social-buttons" style="text-align:center">
-				<li><a href="http://anyfetch.com/how-it-works.html" class="btn btn-default btn-lg"><span class="network-name">How it works</span></a>
-				</li>
-			</ul>
+
+		<div class="col-sm-6 col-md-4">
+			<div class="thumbnail-project">
+				<img src="images/key.svg">
+				<div class="caption">
+					<h2>Customize your business context</h2>
+					<p class="lead">Customize AnyFetch to your context and instantly get relevant data from your existing tools.</p>
+				</div>
+			</div>
 		</div>
+
+		<div class="col-sm-6 col-md-4">
+			<div class="thumbnail-project">
+				<img src="images/timer.svg">
+				<div class="caption">
+					<h2>Deliver faster</h2>
+					<p class="lead">The whole setup takes less than a few hours, that's about 100&times; less than enterprise search.</p>
+				</div>
+			</div>
+		</div>
+	</div>
+	<div>
+	<!-- <h2>See how they use it<a href="use-cases.html" class="btn btn-default btn-lg inline-button"><i class="fa fa-github fa-fw"></i> <span class="network-name">Use cases</span></a></h2> -->
+	</div>
+
+
+
+
+
+	<img src="../images/browser.png" />
+</div>
+
+<div class="content-section-b">
+
+	<div class="container">
+		<h1 class="white">See how they use AnyFetch</h1>
+		<br />
+		<br />
+		<ul class="list-inline intro-social-buttons" style="text-align:center">
+			<li><a href="use-cases.html" class="btn btn-default btn-lg"><span class="network-name">Use cases</span></a>
+			</li>
+		</ul>
+		</div>
+
+
 	</div>
 
 
