--- a/how-it-works.html
+++ b/how-it-works.html
@@ -14,25 +14,25 @@ css: how-it-works.css
 					<div class="col-lg-3 content-column">
 						<h2>Sources</h2>
 						<p>A <strong>"document"</strong> is any element of data created within an app.</p>
-						<p><a class="btn btn-default" href="http://developers.anyfetch.com/guides/using/provider.html" role="button">Connect a data source</a></p>
+						<p><a class="btn btn-default" target="_blank" href="http://developers.anyfetch.com/guides/using/provider.html" role="button">Connect a data source</a></p>
 					</div><!-- /.col-lg-5 -->
 
 					<div class="col-lg-3 content-column column-right">
 						<h2>Providers</h2>
 						<p>A "provider" is the <strong>open-source</strong> connector that retrieves data from a data source.</p>
-						<p><a class="btn btn-default" href="http://developers.anyfetch.com/guides/create/provider.html" role="button">Create a provider</a></p>
+						<p><a class="btn btn-default" target="_blank" href="http://developers.anyfetch.com/guides/creating/provider.html" role="button">Create a provider</a></p>
 					</div><!-- /.col-lg-5 -->
 
 					<div class="col-lg-3 content-column column-right">
 						<h2>Extraction</h2>
 						<p>Datas are <strong>enhanced</strong> with meta-data : an image with OCR, a document with its full-text content. You can use your own code by creating an hydrater.</p>
-						<p><a class="btn btn-default" href="http://developers.anyfetch.com/guides/using/hydrater.html" role="button">Extract meta-data</a></p>
+						<p><a class="btn btn-default" target="_blank" href="http://developers.anyfetch.com/guides/using/hydrater.html" role="button">Extract meta-data</a></p>
 					</div><!-- /.col-lg-5 -->
 
 					<div class="col-lg-3 content-column column-right">
 						<h2>Context</h2>
 						<p>Customize the context to any specific use case. You're an API call away to deliver the right information on any device or application.</p>
-						<p><a class="btn btn-default" href="http://developers.anyfetch.com/guides/creating/frontend.html" role="button">Create an app</a></p>
+						<p><a class="btn btn-default" target="_blank" href="http://developers.anyfetch.com/guides/creating/frontend.html" role="button">Create an app</a></p>
 					</div><!-- /.col-lg-5 -->
 
 	</div>
