--- a/index.html
+++ b/index.html
@@ -12,12 +12,7 @@ layout: main
 			<div class="col-lg-12">
 				<div class="intro-message">
 					<h1>Search, properly done</h1>
-					<img class="source-icon" src="images/salesforce.png">
-					<img class="source-icon" src="images/gmail.png">
-					<img class="source-icon" src="images/drive.png">
-					<img class="source-icon" src="images/dropbox.png">
-					<img class="source-icon" src="images/evernote.png">
-					<img class="source-icon" src="images/database.png">
+					<img class="source-icon" src="images/banner_icons.png">
 					<h3>A complete solution built for developers</h3>
 					<hr class="intro-divider">
 					<ul class="list-inline intro-social-buttons">
@@ -91,5 +86,3 @@ layout: main
 
 
 	</div>
-
-
