--- a/press.html
+++ b/press.html
@@ -8,7 +8,7 @@ layout: main
 
 	<div class="row">
 		<div class="col-lg-12">
-			<h2>They are talking about AnyFetch</h2>
+			<h2>Press</h2>
 			<hr>
 				<ol class="col-md-6 col-md-offset-3">
 					<li><a href="http://pro.clubic.com/entrepreneur-et-creation-entreprise/actualite-702599-pulse-contest-day-2.html" title="Pulse Context 2">[Clubic] Pulse Contest : retour sur la seconde journée des auditions des start-ups</a></li>
