--- a/use-cases.html
+++ b/use-cases.html
@@ -11,49 +11,69 @@ layout: main
 			<div class="jumbotron">
 				<h1 class="title">Turn your data<br/> into information</h1>
 				<p>Context is everywhere</p>
-			</div>
-			<div class="row">
-				<div class="col-8 col-sm-8 col-lg-8 project">
-					<span class="invisible-anchor" id="project1">&nbsp;</span>
+			</div><div class="row">
+				<div class="content-section-">
+								<hr>
+					<div class="container">
+						<div class="row">
+							<div class="col-lg-6">
+								<span class="invisible-anchor" id="project1">&nbsp;</span>
+								<h2>The ultimate business assistant </h2>
+								<p>We are on a mission to revolutionize CRM and the way business users interact with their data. AnyFetch provides contextual feeds providing the information you need, directly within Salesforce and Salesforce1. We created AnyFetch for Salesforce because we, ourselves, wanted to use it. Check out the dedicated website here.</p>
+								<p><a class="btn btn-default" href="http://salesfetch.anyfetch.com" role="button">Salesforce &raquo;</a></p>
+							</div>
+							<div class="col-lg-2 col-lg-offset-1 use-case thumbnail">
+								<img src="images/iphone_salesfetch.jpg">
+							</div>
+						</div>
+					</div>
+					<!-- /.container -->
+				</div>
+				<!-- /.content-section-a -->
+
+				<div class="content-section-">
+								<hr>
+
+					<div class="container">
+
+						<div class="row">
+							<div class="col-lg-2 use-case thumbnail">
+								<img src="images/screen_anyfetch.jpg">
+							</div>
+							<div class="col-lg-6 col-lg-offset-1">
+								<span class="invisible-anchor" id="project2">&nbsp;</span>
+								<h2>Revolutionizing enterprise search</h2>
+								<p>AnyFetch is trusted by IT experts in fiels such as Insurance, Banking, consulting and software development. See how IT services are leveraging AnyFetch to deliver value to their core businesses.</p>
+								<p><a class="btn btn-default" href="./how-it-works.html" role="button">View details &raquo;</a></p>
+							</div>
+						</div>
+
+					</div>
+					<!-- /.container -->
+				</div>
+				<!-- /.content-section-b -->
+
+				<div class="content-section-">
 					<hr>
-					<h2>The ultimate business assistant </h2>
-					<p>We are on a mission to revolutionize CRM and the way business users interact with their data. AnyFetch provides contextual feeds providing the information you need, directly within Salesforce and Salesforce1. We created AnyFetch for Salesforce because we, ourselves, wanted to use it. Check out the dedicated website here.</p>
-					<p><a class="btn btn-default" href="http://salesfetch.anyfetch.com" role="button">Salesforce &raquo;</a></p>
-				</div><!--/span-->
-				<div class="col-4 col-sm-4 col-lg-4">
-					<a href="#" class="thumbnail use-case">
-						<img src="images/iphone_salesfetch.jpg" alt="...">
-					</a>
-				</div><!--/span-->
-			</div>
-			<div class="row">
-				<div class="col-4 col-sm-4 col-lg-4">
-					<a href="#" class="thumbnail use-case">
-						<img src="images/screen_anyfetch.jpg" alt="...">
-					</a>
-				</div><!--/span-->
-				<div class="col-8 col-sm-8 col-lg-8 project">
-					<span class="invisible-anchor" id="project2">&nbsp;</span>
-					<hr>
-					<h2>Revolutionizing enterprise search</h2>
-					<p>AnyFetch is trusted by IT experts in fiels such as Insurance, Banking, consulting and software development. See how IT services are leveraging AnyFetch to deliver value to their core businesses.</p>
-					<p><a class="btn btn-default" href="./how-it-works.html" role="button">View details &raquo;</a></p>
-				</div><!--/span-->
-			</div>
-			<div class="row">
-				<div class="col-8 col-sm-8 col-lg-8 project">
-					<span class="invisible-anchor" id="project3">&nbsp;</span>
-					<hr>
-					<h2>Developers love it</h2>
-					<p>Check out what developers do with AnyFetch, and how they deliver value to their users by providing great user experience. It is only a matter of minutes to get to production, and you can fully test it beforehand.</p>
-					<p><a class="btn btn-default" href="developers.html" role="button">See why &raquo;</a></p>
-				</div><!--/span-->
-				<div class="col-4 col-sm-4 col-lg-4">
-					<a href="#" class="thumbnail use-case">
-						<img src="images/screen_code.jpg" alt="...">
-					</a>
-				</div><!--/span-->
-			</div><!--/row-->
+					<div class="container">
+						<div class="row">
+							<div class="col-lg-6">
+								<span class="invisible-anchor" id="project3">&nbsp;</span>
+								<h2>Developers love it</h2>
+								<p>Check out what developers do with AnyFetch, and how they deliver value to their users by providing great user experience. It is only a matter of minutes to get to production, and you can fully test it beforehand.</p>
+								<p><a class="btn btn-default" href="developers.html" role="button">See why &raquo;</a></p>
+							</div>
+							<div class="col-lg-2 col-lg-offset-1 use-case thumbnail">
+								<img src="images/screen_code.jpg">
+							</div>
+						</div>
+					</div>
+					<!-- /.container -->
+				</div>
+				<!-- /.content-section-a -->
+
+
+		</div><!--/span-->
 		</div><!--/span-->
 
 		<div class="col-xs-6 col-sm-3 sidebar-offcanvas" id="sidebar" role="navigation">
